salesforce/force-app/main/default/objects/Account/fields/Arrears_Balance__c.field-meta.xml
<CustomField>
    <fullName>Arrears_Balance__c</fullName>
    <label>Arrears Balance</label>
    <description>Outstanding arrears balance</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>