salesforce/force-app/main/default/objects/Account/fields/Best_Offer_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Best_Offer_Opt_Out__c</fullName>
    <label>Best Offer Opt Out</label>
    <description>Customer opted out of automatic best-offer switching</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>