salesforce/force-app/main/default/objects/Account/fields/Current_Plan__c.field-meta.xml
<CustomField>
    <fullName>Current_Plan__c</fullName>
    <label>Current Plan</label>
    <description>Energy plan the customer is on today</description>
    <type>Text</type>
    <length>120</length>
</CustomField>