salesforce/force-app/main/default/objects/Account/fields/External_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Customer_Id__c</fullName>
    <label>External Customer Id</label>
    <description>Customer id from the billing platform</description>
    <type>Text</type>
    <length>50</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>