salesforce/force-app/main/default/objects/Account/fields/Financial_Stress_Reason__c.field-meta.xml
<CustomField>
    <fullName>Financial_Stress_Reason__c</fullName>
    <label>Financial Stress Reason</label>
    <description>Why the stress signal was raised</description>
    <type>Text</type>
    <length>255</length>
</CustomField>