salesforce/force-app/main/default/objects/Account/fields/Financial_Stress_Signal__c.field-meta.xml
<CustomField>
    <fullName>Financial_Stress_Signal__c</fullName>
    <label>Financial Stress Signal</label>
    <description>Agent or system detected financial stress</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>