salesforce/force-app/main/default/objects/Account/fields/Hardship_Entered_At__c.field-meta.xml
<CustomField>
    <fullName>Hardship_Entered_At__c</fullName>
    <label>Hardship Entered At</label>
    <description>Date tailored assistance started</description>
    <type>Date</type>
</CustomField>