salesforce/force-app/main/default/objects/Account/fields/Hardship_Review_Due_At__c.field-meta.xml
<CustomField>
    <fullName>Hardship_Review_Due_At__c</fullName>
    <label>Hardship Review Due At</label>
    <description>Date the next hardship review falls due</description>
    <type>Date</type>
</CustomField>