salesforce/force-app/main/default/objects/Account/fields/Hardship_Status__c.field-meta.xml
<CustomField>
    <fullName>Hardship_Status__c</fullName>
    <label>Hardship Status</label>
    <description>none | requested | active | exited</description>
    <type>Text</type>
    <length>40</length>
</CustomField>