salesforce/force-app/main/default/objects/Account/fields/Missed_Payments_90d__c.field-meta.xml
<CustomField>
    <fullName>Missed_Payments_90d__c</fullName>
    <label>Missed Payments 90d</label>
    <description>Missed payments in the last 90 days</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>