salesforce/force-app/main/default/objects/Account/fields/Oldest_Debt_Days__c.field-meta.xml
<CustomField>
    <fullName>Oldest_Debt_Days__c</fullName>
    <label>Oldest Debt Days</label>
    <description>Age in days of the oldest unpaid amount</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>