salesforce/force-app/main/default/objects/Account/fields/Partial_Payments_90d__c.field-meta.xml
<CustomField>
    <fullName>Partial_Payments_90d__c</fullName>
    <label>Partial Payments 90d</label>
    <description>Partial payments in the last 90 days</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>