salesforce/force-app/main/default/objects/Account/fields/Sensitive_Customer__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Customer__c</fullName>
    <label>Sensitive Customer</label>
    <description>Family violence, life support or other marker that blocks disconnection as a debt-recovery step</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>